# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  build.sh
common/: ArcballCamera.cpp  ArcballCamera.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  INIReader.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  flat_hash_map.h  shader.cpp  shader.hpp
lib/pkgconfig/: assimp.pc
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.cpp
src/base/baseshaders/: vertex.vert
src/light/: CMakeLists.txt  light.cpp
src/shading/: CMakeLists.txt  shading.cpp
src/shading/shadingshaders/: config.ini  cube_flat.frag  cube_flat.vert  fragment.frag  shading.frag  teapot.stl  vertex.vert
src/shadingArcballCamera/: CMakeLists.txt  shading.cpp
src/simple/: CMakeLists.txt  simple.cpp
